--- a/.github/workflows/fuzzer.yml
+++ b/.github/workflows/fuzzer.yml
@@ -2,8 +2,8 @@ name: Fuzzer
 on: workflow_dispatch
 
 jobs:
-  lint:
-    name: Lint
+  fuzzer:
+    name: Fuzzer
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -18,7 +18,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
 
       - name: Build
-        run: go mod tidy && -buildvcs=false .
+        run: go mod tidy && go build -buildvcs=false .
 
       - name: Run
         run: ./fuzzer
