--- a/.github/workflows/fuzzer.yml
+++ b/.github/workflows/fuzzer.yml
@@ -21,7 +21,7 @@ jobs:
         run: go mod tidy && go build -buildvcs=false .
 
       - name: Run
-        run: ./fuzzer
+        run: ./fuzzer fuzz
       - uses: actions/upload-artifact@v4
         with:
           # Name of the artifact to upload.
