--- a/.github/workflows/fuzzer.yml
+++ b/.github/workflows/fuzzer.yml
@@ -26,11 +26,11 @@ jobs:
         with:
           # Name of the artifact to upload.
           # Optional. Default is 'artifact'
-          name: crash.json
+          name: repro.json
 
           # A file, directory or wildcard pattern that describes what to upload
           # Required.
-          path: crash.json
+          path: repro.json
 
           # The desired behavior if no files are found using the provided path.
           # Available Options:
