--- a/.github/workflows/fuzzer.yml
+++ b/.github/workflows/fuzzer.yml
@@ -1,5 +1,9 @@
 name: Fuzzer
-on: workflow_dispatch
+on:
+  workflow_dispatch
+  push:
+    branches:
+      - master
 
 jobs:
   fuzzer:
@@ -12,13 +16,15 @@ jobs:
         run: git config --global core.autocrlf false # required on Windows
 
       - uses: actions/checkout@v4
+        with:
+          repository: SiaFoundation/fuzz
 
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
 
       - name: Build
-        run: go mod tidy && go build -buildvcs=false .
+        run: go get go.sia.tech/coreutils@master && go mod tidy && go build -buildvcs=false .
 
       - name: Run
         run: ./fuzzer fuzz
